[gd_scene load_steps=7 format=3 uid="uid://cc6qfhox5y31x"]

[ext_resource type="Script" uid="uid://c38xdey4ql8dr" path="res://UI/Menu/card_2.gd" id="1_72akv"]
[ext_resource type="Texture2D" uid="uid://du6d67d0ri44t" path="res://Assets/White_Background.jpg" id="2_ejfx5"]

[sub_resource type="Animation" id="Animation_1i5pp"]
resource_name = "Deselect"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -100), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_fpac0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_e484p"]
resource_name = "Select"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -100)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pjytt"]
_data = {
&"Deselect": SubResource("Animation_1i5pp"),
&"RESET": SubResource("Animation_fpac0"),
&"Select": SubResource("Animation_e484p")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_72akv")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pjytt")
}

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(500, 700)
layout_mode = 0
offset_right = 500.0
offset_bottom = 700.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_ejfx5")
expand_mode = 1

[connection signal="gui_input" from="TextureRect" to="." method="_on_texture_rect_gui_input"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_texture_rect_mouse_exited"]
